<resources>
    <string name="app_name">Popular movies</string>

    <string name="api_key"></string>

    <string name="sort_by_rate_action">Rating sort</string>

    <string name="sort_by_popularity_action">Popularity sort</string>

    <string name="thumbnail_content_description">Movie poster thumbnail</string>

    <string name="movies_popularity_sorting">sort_by_popularity</string>

    <string name="movies_rating_sorting">sort_by_rating</string>

    <string name="movies_popularity_sorting_app_title_suffix">" (most popular)"</string>

    <string name="movies_rating_sorting_app_title_suffix">" (top rated)"</string>

    <string name="no_tmdb_movie_found">No TMDB movie found</string>

    <string name="tmdb_movies_loading_error_toast">Error: TMDB movies list hasn\'t been loaded</string>

    <string name="sort_type_pref_key">sort_type</string>

    <string name="size_w200_end_point">w200</string>

    <string name="size_w300_end_point">w300</string>

    <string name="movie_parcel_key">MovieParcel</string>

    <string name="details_activity_caption">Popular movies: details</string>

    <string name="poster_content_description">Movie poster</string>

    <string name="release_date_label">Release date:</string>

    <string name="vote_rating_label">Vote rating:</string>

    <string name="rating_in_brackets">(%1$.1f)</string>

    <string name="menu_item_undefined_action_toast">Undefined action for menu item</string>

    <string name="movie_review_list_not_loaded_toast">Movie review list hasn\'t been loaded</string>

    <string name="movie_video_thumbnail">Movie video thumbnail</string>

    <string name="movie_video_list_not_loaded_toast">Movie video list hasn\'t been loaded</string>

    <string name="implicit_intent_chooser_title">Open with</string>

    <string name="review_extra_name">ReviewParcel</string>

    <string name="no_favourite_movie_found">There is no movie marked as favourite</string>

    <string name="favourite_movies_loading_error_toast">Error: favourite movie list hasn\'t been loaded</string>

    <string name="undefined_loader">Undefined loader</string>

    <string name="favourite_movies_list">favourite_list</string>

    <string name="show_favourite_action">show favourite</string>

    <string name="favourite_list_app_title_suffix">" (favourite)"</string>

    <string name="movie_reviews_label">"Reviews: "</string>

    <string name="movie_videos_label">"Videos: "</string>

    <string name="add_to_favourite_toast">"Movie has been added to favourite"</string>

    <string name="failed_to_add_to_favourite_toast">Failed to add movie to favourite</string>

    <string name="remove_from_favourite_toast">"Movie has been removed from favourite"</string>

    <string name="failed_to_remove_to_favourite_toast">Failed to remove movie to favourite</string>
</resources>
