<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_details_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        app:layout_constraintVertical_chainStyle="spread_inside"

        app:popupTheme="@style/OptionsMenuTheme"
        android:theme="@style/AppTheme"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        app:titleTextColor="@color/textColorPrimary"
        android:textSize="16sp" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.viatorfortis.popularmovies.ui.DetailsActivity" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:theme="@style/AppTheme" >
            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/BlackOnWhiteThemeAndSmallPadding"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/iv_details_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_details_release_date"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"

                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="Movie title" />

            <ImageView
                android:id="@+id/iv_details_poster"

                android:layout_width="0dp"
                android:layout_height="400dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_details_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_title"

                app:layout_constraintVertical_chainStyle="spread_inside"

                android:scaleType="fitCenter"
                android:contentDescription="@string/poster_content_description" />

            <TextView
                android:id="@+id/tv_details_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_details_release_date"
                app:layout_constraintTop_toBottomOf="@+id/iv_details_poster"

                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.0"

                android:theme="@style/BlackOnWhiteThemeAndSmallPadding"
                android:textSize="16sp"
                android:text="@string/release_date_label" />

            <TextView
                android:id="@+id/tv_details_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@+id/tv_details_release_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_details_release_date_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_release_date_label"

                app:layout_constraintHorizontal_bias="0.5"

                android:theme="@style/BlackOnWhiteThemeAndSmallPadding"
                android:textSize="16sp"
                tools:text="2018-12-19" />

            <TextView
                android:id="@+id/tv_details_vote_average_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rb_details_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_release_date"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"

                android:padding="8dp"

                android:theme="@style/BlackOnWhiteTheme"
                android:textSize="16sp"
                android:text="@string/vote_rating_label" />

            <RatingBar
                android:id="@+id/rb_details_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@+id/tv_details_vote_average_label"
                app:layout_constraintEnd_toStartOf="@+id/tv_details_vote_average"
                app:layout_constraintTop_toTopOf="@+id/tv_details_vote_average_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_vote_average_label"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"

                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"

                style="@android:style/Widget.Holo.Light.RatingBar.Small"
                android:isIndicator="true"
                android:numStars="10"
                android:stepSize="0.25"
                android:rating="7" />

            <TextView
                android:id="@+id/tv_details_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@+id/rb_details_vote_average"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_details_vote_average_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_vote_average_label"

                app:layout_constraintHorizontal_bias="0.5"

                android:theme="@style/BlackOnWhiteThemeAndSmallPadding"
                android:textSize="16sp"
                tools:text="(7.0)" />

            <TextView
                android:id="@+id/tv_details_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/tv_details_vote_average_label"

                android:theme="@style/DefaultPaddingTheme"
                android:background="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_review_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/tv_details_plot_synopsis"

                android:layout_marginTop="16dp"

                android:theme="@style/BlackOnWhiteThemeWithPadding"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/movie_reviews_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="300dp"

                app:layout_constraintTop_toBottomOf="@id/tv_review_label"

                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_videos_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/rv_movie_reviews"

                android:theme="@style/BlackOnWhiteThemeWithPadding"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/movie_videos_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movieVideos"
                android:layout_width="match_parent"
                android:layout_height="280dp"

                app:layout_constraintTop_toBottomOf="@id/tv_videos_label"
                app:layout_constraintBottom_toBottomOf="parent"

                android:scrollbars="horizontal" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>